[package]
name = "jmge"
version = "0.1.0"
authors = ["Juun"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = { path = "./gl" }
glfw = "0.36.0"
image = "0.23.0"
nalgebra = "0.19.0"
rect_packer = "0.2.1"
rusttype = "0.8.2"


